# image_rs

./: .gitignore  .gitlab-ci.yml  README.md  checksum-Elixir.ImageRs.Nif.exs  mix.exs
.github/workflows/: linux.yml  macos.yml  nerves.yml  release.yml
lib/: comptime_utils.ex  image_rs.ex  image_rs_nif.ex  img_decode.ex  img_decode_nif.ex
native/image_rs/: Cargo.toml
native/image_rs/src/: datatypes.rs  error.rs  image_rs.rs  lib.rs
native/image_rs_nif/: Cargo.toml
native/image_rs_nif/src/: lib.rs
native/img_decode_rs/: Cargo.toml
native/img_decode_rs/src/: lib.rs
test/: image_rs_test.exs  img_decode_test.exs
