[package]
name = "image_rs"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "image_rs"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.30.0"
image = "0"

[features]
default = ["nif_version_2_15"]

# Feature necessary for Rustler Precompiled.
nif_version_2_15 = ["rustler/nif_version_2_15"]
