[package]
name = "image_rs"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "image_rs"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
image = "0.25"
rustler = "0.36"
thiserror = "1"

[features]
default = [
    "nif_version_2_15",
    "gif",
    "jpeg",
    "ico",
    "png",
    "pnm",
    "tga",
    "tiff",
    "webp",
    "bmp",
    "hdr",
    "dds",
    "qoi",
]
avif = ["image/avif"]
dds = ["image/dds"]
hdr = ["image/hdr"]
ico = ["image/ico"]
pnm = ["image/pnm"]
qoi = ["image/qoi"]
tga = ["image/tga"]
webp = ["image/webp"]
gif = ["image/gif"]
jpeg = ["image/jpeg"]
png = ["image/png"]
tiff = ["image/tiff"]
bmp = ["image/bmp"]

# Feature necessary for Rustler Precompiled.
nif_version_2_15 = ["rustler/nif_version_2_15"]
